--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     git:
       url: https://github.com/shiosyakeyakini-info/misskey_dart.git
       ref: master
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
