--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,21 +34,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  mfm: ^1.0.6
-  freezed: ^2.4.6
-  go_router: ^13.0.1
+  cupertino_icons: ^1.0.6
+  mfm: ^1.0.7+1
+  freezed: ^2.4.7
+  go_router: ^13.2.0
   uuid: ^4.3.3
-  url_launcher: ^6.2.3
+  url_launcher: ^6.2.5
   shared_preferences: ^2.2.2
-  flutter_riverpod: ^2.4.9
-  http: ^1.1.2
+  flutter_riverpod: ^2.4.10
+  http: ^1.2.1
   misskey_dart:
     git:
       url: https://github.com/shiosyakeyakini-info/misskey_dart.git
       ref: master
   flutter_secure_storage: ^9.0.0
   tabler_icons_for_flutter: ^1.0.4
+  media_kit: ^1.1.10+1
+  media_kit_video: ^1.2.4
+  media_kit_libs_video: ^1.0.4
 
 dev_dependencies:
   flutter_test:
