--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4
   dotted_border: ^2.1.0
+  intersperse: ^2.0.0
 
 dev_dependencies:
   flutter_test:
