feat: add app icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,14 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.4 <4.0.0'
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/icon.png"
+  adaptive_icon_background: "assets/images/icon_background.png"
+  adaptive_icon_foreground: "assets/images/icon_foreground.png"
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -61,6 +69,7 @@ dependencies:
   timeago: ^3.6.1
   flutter_blurhash: ^0.8.2
   cached_network_image: ^3.3.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
