--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   flutter_blurhash: ^0.8.2
   cached_network_image: ^3.3.1
   flutter_launcher_icons: ^0.13.1
+  twemoji: ^0.4.3
+  collection: ^1.18.0
+  flutter_highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
