enhance: apply simple mfm to user name / notification body

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/
   fonts:
     - family: Inter
       fonts:
