--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,7 +91,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/
+    - assets/images/
   fonts:
     - family: Inter
       fonts:
