--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   uuid: ^4.3.3
   url_launcher: ^6.2.5
   shared_preferences: ^2.2.2
+  flutter_riverpod: ^2.4.10
   http: ^1.2.1
   misskey_dart:
     git:
@@ -72,8 +73,6 @@ dependencies:
   twemoji: ^0.4.3
   collection: ^1.18.0
   flutter_highlight: ^0.7.0
-  flutter_hooks: ^0.20.5
-  hooks_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
